# manu-sdk

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml  release.yml
manu_sdk/: __init__.py
manu_sdk/example/: __init__.py  example1.py
manu_sdk/hello/: __init__.py  world.py
scripts/: build.sh
tests/: test_helloworld.py
