[tool.poetry]
name = "manu-sdk"
version = "0.7.0"
description = "SDK to automate and manage stuff for Manu"
authors = ["Manpreet Shuann <manpreetshuann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "*"
poetry-bumpversion = "^0.3.2"
flake8-pyproject = "^1.2.3"
setuptools = "^69.1.1"
restructuredtext-lint = "^1.4.0"
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.2.0"
python-semantic-release = "^9.1.1"

[tool.semantic_release]
version_variables = ["manu_sdk/version.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
token = { env = "secrets.GITHUB_TOKEN" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry_bumpversion.file."manu_sdk/version.py"]

[[tool.poetry_bumpversion.replacements]]
files = ["README.md"]
search = 'version: {current_version}'
replace = 'version: {new_version}'

[tool.flake8]
ignore = ['E501', 'F401', 'F403']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
